Travel::Status::DE::VRR 1.19 - Sat Mar 27 2021

    * Result: Add ->train_no accessor

Travel::Status::DE::VRR 1.18 - Thu Mar 25 2021

    * EFA: "place" is now optional
    * Result: Add ->occupancy accessor
    * efa-m: The "place" argument is now optional
    * efa-m: Show expected vehicle occupancy, if available

Travel::Status::DE::VRR 1.17 - Sat May 02 2020

    * Add MVV (Münchner Verkehrs- und Tarifverbund) and VAG (Freiburger
      Verkehrs AG) services
    * Fix encoding when using VOR or LinzAG services

Travel::Status::DE::VRR 1.16 - Fri May 01 2020

    * Use HTTPS for  DING, VOR, LinzAG, VGN, VRR, VRR2, VVS, NVBW, KVV and BSVG
      services
    * Update VGN, VVO, VMV and KVV service URLs
    * Remove IVB, VVV and VRNdelfi services
    * Re-add Verbundlinie service

Travel::Status::DE::VRR 1.15 - Wed Jul 05 2017

    * Fix encoding issues caused by recent API changes

Travel::Status::DE::VRR 1.14 - Sat Oct 08 2016

    * efa-m: Fix broken encoding in --list output

Travel::Status::DE::VRR 1.13 - Sun Mar 06 2016

    * EFA: Add accessors name_candidates and place_candidates
    * EFA: errstr: in cases of ambiguous input, the name/place
      candidates list is no longer encoded in the errstr accessor. Use the
      new name_candidates / place_candidates accessors instead.

Travel::Status::DE::VRR 1.12 - Tue Aug 04 2015

    * EFA: Add static method get_efa_urls
    * Line: Add mot and mot_name accessors
    * Result: Add mot and mot_name accessors
    * efa-m: Add -A / --auto-url / --discover-and-print option
    * efa-m: Add -D / --discover option
    * efa-m: Add --list option
    * efa-m: Add -m / --mot option
    * efa-m: Add -s / --service option

Travel::Status::DE::VRR 1.11 - Tue Jun 30 2015

    * efa-m: Remove -V alias for --version
    * efa-m: Add -V / --track-via option
    * efa-m: Add -O / --output option with outputtypes
      route_after, route_before, fullroute and route